# populationsim

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
docs/: Makefile  application_configuration.rst  conf.py  docs.rst  docs_build.rst  getting_started.rst  index.rst  make.bat  software.rst  validation.rst
examples/: README.md
populationsim/steps/: expand_households.py  repop_balancing.py
populationsim/tests/: run_mp.py  test_steps_mp.py
