[project]
name = "nick-populationsim"
version = "0.6.3"
description = "Population Synthesis (for ActivitySim)"
authors = [
    { name = "Ben Stabler", email = "ben.stabler@rsginc.com" }
    ]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "activitysim==1.1.3",
    "numpy==1.25.2",
    "ortools==9.8.3296",
    "pandas==2.1.0",
    "setuptools>=75.8.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]

[pytest.ini]
python_paths = [
    "populationsim",
    "tests",
]

[tool.setuptools]
packages = [
    "populationsim",
]
